feat: use local setting

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
       - data-storage:/data/storage
       - data-tmp:/data/tmp
     environment:
-      DOWNLOAD_URL: 'http://YOUR_MACHINE_IP:3000/download'
-      TOKEN_SECRET: 'YOUR_JWT_TOKEN_SECRET'
+      DOWNLOAD_URL: 'http://127.0.0.1:3000/download'
+      TOKEN_SECRET: 'Jh5kmHhIaKMrlv9DUGcw0g33NhtZJxhMoBY8Ouh4nHyIntGDZfuqi2r8Fn5t70t'
       RDS_HOST: 'mysql'
       RDS_USERNAME: 'codepush'
       RDS_PASSWORD: '123456'
