--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - data-tmp:/data/tmp
     environment:
       DOWNLOAD_URL: 'http://192.168.14.34:3000/download'
-      TOKEN_SECRET: 'Jh5kmHhIaKMrlv9DUGcw0g33NhtZJxhMoBY8Ouh4nHyIntGDZfuqi2r8Fn5t70t'
+      TOKEN_SECRET: ${TOKEN_SECRET}
       RDS_HOST: 'mysql'
       RDS_USERNAME: 'codepush'
       RDS_PASSWORD: '123456'
